--- a/style.css
+++ b/style.css
@@ -92,9 +92,12 @@ li > a:hover {
   top: 0;
   bottom: 0;
   opacity: 0.9;
-  font-size: 30px;
 }
 
 #page-content {
   margin-left: 100px;
+}
+
+.fa {
+  font-size: 30px;
 }
